Corregido bug en referencias

--- a/public/app/css/project/custom.css
+++ b/public/app/css/project/custom.css
@@ -518,11 +518,17 @@ h3 > .json-editor-btn-collapse[title="Expand"] ~ label{
 
 
 .product-select2-info{
-    display: inline-block
+    display: inline-block;
 }
-.product-select2-info span{
-    display: block;    
+.select2-banner-image{
+    vertical-align: top !important;
 }
+
+.product-select2-info > div{    
+    display: block;
+    padding-top: 8px;
+}
+
 
 
 
