--- a/src/templates/app/booklet/list.phtml
+++ b/src/templates/app/booklet/list.phtml
@@ -1,5 +1,5 @@
 <?php $this->start('filters') ?>
-<div class="col-sm-6 col-xl-3">
+<div class="profile-allow profile-A col-sm-6 col-xl-3">
     <label class="form-label"><?= __('app.entity.market') ?></label>
     <select data-placeholder="<?php __ss('app.common.select_value') ?>" class="form-select form-select-sm datatables-column-search-filter kt-select2" data-col-name="market_id">
         <option value=""></option>
