--- a/src/templates/app/user/inc/personal_information.phtml
+++ b/src/templates/app/user/inc/personal_information.phtml
@@ -5,7 +5,7 @@
             <div class="image-input-wrapper w-125px h-125px"></div>
             <label class="btn btn-icon btn-circle btn-active-color-primary w-25px h-25px bg-body shadow" data-kt-image-input-action="change" data-bs-toggle="tooltip" title="<?php echo __('app.common.form.select_image') ?>">
                 <i class="bi bi-pencil-fill fs-7"></i>
-                <input type="file" name="avatar" accept="image/*" />
+                <input type="file" name="avatar" accept="image/svg+xml, image/jpeg, image/png" />
             </label>
             <span class="btn btn-icon btn-circle btn-active-color-primary w-25px h-25px bg-body shadow" data-kt-image-input-action="cancel" data-bs-toggle="tooltip" title="<?php echo __('app.common.form.remove_image') ?>">
                 <i class="bi bi-x fs-2"></i>
