--- a/src/templates/app/inc/common/datatable.phtml
+++ b/src/templates/app/inc/common/datatable.phtml
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </div>
-            <table class="table table-hover gy-5 gs-7" id="<?= $datatableId ?>" <?php if (!empty($attributes)) : ?><?= $attributes ?><?php endif; ?> data-js="<?= ucfirst($entity) ?>Datatable">
+            <table class="table table-hover gy-5 gs-7" id="<?= $datatableId ?>" <?php if (!empty($attributes)) : ?><?= $attributes ?><?php endif; ?> data-js="<?= App\Util\CommonUtils::underscoreToCamelCase($entity, '-') ?>Datatable">
                 <thead>
                     <tr class="text-start text-muted fw-bold fs-7 text-uppercase gs-0">
                         <?= $columns ?>
