--- a/src/templates/app/inc/header/sidebar.phtml
+++ b/src/templates/app/inc/header/sidebar.phtml
@@ -51,6 +51,16 @@
                 </li>
                 <!--end::Navbar item-->
                 <!--begin::Navbar item-->
+                <li class="profile-allow profile-B nav-item py-1">
+                    <!--begin::Navbar link-->
+                    <a href="/app/custom_products" class="nav-link py-4 px-1 btn <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuCustomProduct, 'active'); ?>">
+                        <?php $this->insert("inc/common/icon/product_1") ?>
+                        <span class="pt-2 fs-9 fs-lg-7 fw-bold"><?php echo __('app.entity.plural.custom_product') ?></span>
+                    </a>
+                    <!--end::Navbar link-->
+                </li>
+                <!--end::Navbar item-->
+                <!--begin::Navbar item-->
                 <li class="profile-allow profile-A nav-item py-1">
                     <!--begin::Navbar link-->
                     <a href="/app/subproducts" class="nav-link py-4 px-1 btn <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuSubProduct, 'active'); ?>">
