--- a/src/templates/app/inc/footer/footer.phtml
+++ b/src/templates/app/inc/footer/footer.phtml
@@ -33,6 +33,8 @@
 <script src="/app/js/i18n.js<?php echo '?v=' . RESOURCES_VERSION ?>" type="text/javascript"></script>
 <script src="/app/js/lib/jsoneditor.i18n.js<?php echo '?v=' . RESOURCES_VERSION ?>" type="text/javascript"></script>
 
+<script src="/app/js/mediainput.custom.js<?php echo '?v=' . RESOURCES_VERSION ?>" type="text/javascript"></script>
+
 <!-- Traducciones importadas directamente en CA -->
 <?php if (__('app.js.lang.code') == 'ca'): ?>
     <script src="/app/js/select2.ca.js" type="text/javascript"></script>
