--- a/src/templates/app/booklet/form.phtml
+++ b/src/templates/app/booklet/form.phtml
@@ -5,6 +5,7 @@
     action="/app/booklet/save/<?php echo \App\Constant\App\FormSaveMode::SaveAndContinue ?>"
     method="post"
     autocomplete="off"
+    enctype="multipart/form-data"
     data-default-market-id="<?php echo !empty($data['default_market_id']) ? $data['default_market_id'] : '' ?>">
     <?php
     $this->insert(
@@ -18,7 +19,7 @@
         ]
     );
     ?>
-    
+
     <?php if (!empty($data['id'])): ?>
         <input type="hidden" name="id" value="<?php echo $data['id'] ?>" />
     <?php else: ?>
@@ -26,7 +27,7 @@
     <?php endif; ?>
 
     <div class="stepper stepper-pills first" id="mt-booklet-stepper">
-        <?php if($data['type'] == App\Constant\BookletType::Flyer): ?>
+        <?php if ($data['type'] == App\Constant\BookletType::Flyer): ?>
             <?php $this->insert("inc/common/stepper_nav", ['steps' => [
                 __('app.common.step_info'),
                 __('app.common.step_page') . ' ' . 1,
@@ -36,6 +37,7 @@
         <?php else: ?>
             <?php $this->insert("inc/common/stepper_nav", ['steps' => [
                 __('app.common.step_info'),
+                __('app.common.step_cover'),
                 __('app.common.step_page') . ' ' . 2,
                 __('app.common.step_page') . ' ' . 3,
                 __('app.common.step_page') . ' ' . 4,
@@ -160,9 +162,63 @@
                 <?php endif; ?>
             </div>
 
+            <?php if ($data['type'] != App\Constant\BookletType::Flyer): ?>
+                <div class="flex-column" data-kt-stepper-element="content">
+                    <div class="card card-custom card-sticky">
+                        <div class="card-header">
+                            <div class="card-title">
+                                <h2><?php echo __('app.common.step_cover') ?></h2>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <div class="row mb-2">
+                                <div class="col-lg-10 fv-row form-item">
+                                    <div class="d-flex align-items-center mt-3 radio-list">
+                                        <label class="form-check form-check-custom form-check-inline me-10">
+                                            <input class="form-check-input" name="cover_type" type="radio" value="select" allow-save-invalid>
+                                            <span class="fw-semibold ps-3 fs-6"><?= __('app.booklet.cover_select') ?></span>
+                                        </label>
+                                        <label class="form-check form-check-custom form-check-inline">
+                                            <input class="form-check-input" name="cover_type" type="radio" value="upload" allow-save-invalid>
+                                            <span class="fw-semibold ps-3 fs-6"><?= __('app.booklet.cover_upload') ?></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="cover-select-container pb-4">
+                                <div class="image-select-container form-item">
+                                    <div class="d-flex flex-wrap align-content-around mt-2 mh-400px">
+                                        <?php foreach ($data['cover_images'] as $i => $image): ?>
+                                            <div class="image-select radio-list">
+                                                <input type="radio"
+                                                    name="cover_file_id"
+                                                    id="<?= 'cover_img_' . $i ?>"
+                                                    value="<?= $image['id'] ?>">
+                                                <label for="<?= 'cover_img_' . $i ?>"></label>
+                                            </div>
+                                        <?php endforeach; ?>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="cover-upload-container pb-4">
+                                <?php $this->insert("inc/common/image_upload", ['id' => 'cover-upload', 'title' => __('app.common.cover'), 'inputName' => 'cover', 'recommendedDimensions' => '2550px x 3613px']) ?>
+                            </div>
+
+                            <?php if (!empty($params['BOOKLET_COVER_FILE'])): ?>
+                                <div class="pb-4">
+                                    <a href="" class="btn btn-link cover-source-download" target="_blank"><?= __('app.booklet.cover_file_download') ?></a>
+                                </div>
+                            <?php endif; ?>
+                        </div>
+                    </div>
+                </div>
+            <?php endif; ?>
+
             <?php $this->insert("booklet/inc/page", ['pageNum' => 2, 'layouts' => $data['layouts'], 'type' => $data['type']]) ?>
             <?php $this->insert("booklet/inc/page", ['pageNum' => 3, 'layouts' => $data['layouts'], 'type' => $data['type']]) ?>
-            <?php if($data['type'] != App\Constant\BookletType::Flyer): ?>
+            <?php if ($data['type'] != App\Constant\BookletType::Flyer): ?>
                 <?php $this->insert("booklet/inc/page", ['pageNum' => 4, 'layouts' => $data['layouts'], 'type' => $data['type']]) ?>
             <?php endif; ?>
 
