--- a/src/templates/app/product/inc/information.phtml
+++ b/src/templates/app/product/inc/information.phtml
@@ -64,10 +64,10 @@
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'logo_' . $lang, 'title' => __('app.product.title'), 'inputName' => 'logo_' . $lang, 'recommendedDimensions' => ""]) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'logo_' . $lang, 'title' => __('app.product.title'), 'inputName' => 'logo_' . $lang, 'recommendedDimensions' => '645px × 100px']) ?>
                 </div>
                 <div class="col-md-4 text-center">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'photo_' . $lang, 'title' => __('app.product.photo'), 'inputName' => 'photo_' . $lang, 'recommendedDimensions' => ""]) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'photo_' . $lang, 'title' => __('app.product.photo'), 'inputName' => 'photo_' . $lang, 'recommendedDimensions' => '400px × 220px']) ?>
                 </div>
             </div>
             <div class="row mt-4 border-top pt-4">
