--- a/src/templates/app/pdf/recipe/recipe.phtml
+++ b/src/templates/app/pdf/recipe/recipe.phtml
@@ -33,8 +33,18 @@
             src: url(<?php echo $params['SITE.URL'] ?>/app/fonts/montserrat-bold.ttf);
         }
 
+        @font-face {
+            font-family: 'AvenirNext-Regular';
+            src: url(<?php echo $params['SITE.URL'] ?>/app/fonts/avenir-next-regular.ttf);
+        }
+
+        @font-face {
+            font-family: 'AvenirNext-Bold';
+            src: url(<?php echo $params['SITE.URL'] ?>/app/fonts/avenir-next-bold.ttf);
+        }
+
         body {
-            font-family: 'AvenirNextCondensed-Regular', sans-serif;
+            font-family: 'AvenirNext-Regular', sans-serif;
         }
 
         .type-CMYK .visible-area {
@@ -158,7 +168,6 @@
             border-bottom-right-radius: 50px;
             height: 60px;
             z-index: 4;
-            font-family: AvenirNextCondensed-Regular, 'sans-serif';
         }
 
         .container>.col-left>.group-title img {
@@ -176,7 +185,7 @@
             text-align: left;
             margin-left: 160px;
             padding-top: 6px;
-            bottom: 116px;
+            bottom: 110px;
         }
 
         .container>.col-left>.group-content {
@@ -210,7 +219,7 @@
             text-align: right;
             padding-right: 240px;
             padding-top: 6px;
-            margin-top: -145px;
+            margin-top: -139px;
         }
 
         .container>.col-right>.group-content {
@@ -231,7 +240,7 @@
             margin-bottom: 30px;
             margin-top: -50px;
             padding-top: 50px;
-            font-family: MontserratBold, sans-serif;
+            font-family: Montserrat-Bold, sans-serif;
         }
 
         .header-top>div {
@@ -307,7 +316,7 @@
             margin-top: 20px;
             font-size: 28px;
             padding-top: 50px;
-            margin-top: -20px;
+            margin-top: -30px;
             padding-bottom: 18px;
         }
 
@@ -338,11 +347,11 @@
         }
 
         .info-column {
-            width: 50%;
+            width: 55%;
         }
 
         .image-column {
-            width: 35%;
+            width: 30%;
         }
 
         .qr-column {
@@ -354,8 +363,10 @@
         }
 
         .product-subtitle {
-            margin: 35px 0;
+            margin-top: 60px;
+            margin-bottom: 35px;
             font-size: 36px;
+            line-height: 0.8;
         }
 
         .product-title {
@@ -365,7 +376,7 @@
         .product-title-image-container {
             width: 645px;
             display: inline-block;
-            margin-top: 6px;
+            padding-top: 28px;
         }
 
         .product-title-image-container img {
@@ -377,22 +388,24 @@
         }
 
         .product-treatment {
-            font-weight: 700;
             border: 3px solid #164070;
             border-radius: 12px;
             width: 145px;
             font-size: 22px;
             display: inline;
-            padding: 7px 5px;
+            padding-top: 0px;
+            padding-bottom: 3px;
+            line-height: 1;
             position: absolute;
             text-align: center;
-            margin-top: -5px;
+            font-family: AvenirNextCondensed-Bold, sans-serif;
         }
 
         .group-reference {
             position: relative;
             top: -20px;
             left: 5px;
+            font-family: AvenirNextCondensed-Regular, sans-serif;
         }
 
         .group-reference.columns {
@@ -411,13 +424,8 @@
             font-weight: 700;
         }
 
-        .group-reference.columns .column div {
-            margin-bottom: 1px;
-        }
-
         .reference-row {
             display: table;
-            margin-bottom: 16px;
         }
 
         .radio-cell,
@@ -426,9 +434,9 @@
             vertical-align: middle;
         }
 
-         .text-cell {
-            padding-bottom: 16px;
-         }
+        .text-cell {
+            line-height: 0.5;
+        }
 
 
         .text-cell .reference {
@@ -443,7 +451,7 @@
         .radio-cell {
             padding-right: 4px;
             width: 26px;
-            transform: translateX(-3px); 
+            transform: translateX(-3px);
         }
 
         .radio-circle {
@@ -502,12 +510,13 @@
             margin: 0 auto;
             display: inline-block;
             vertical-align: top;
+            text-align: center;
         }
 
 
         .group-label {
             z-index: 1;
-            height: 60px;
+            height: 45px;
             margin-top: -20px;
             padding-bottom: 30px !important;
         }
@@ -526,6 +535,7 @@
         }
 
         .group-label-right .bar {
+            margin-top: -4px;
             margin-left: 30px;
         }
 
@@ -534,8 +544,7 @@
             margin-top: 8px;
             color: #164070;
             text-transform: uppercase;
-            font-weight: 700;
-            font-family: AvenirNextCondensed-Bold, 'sans-serif';
+            font-family: 'AvenirNext-Bold';
         }
 
         .group-label-left .title {
@@ -554,14 +563,18 @@
         }
 
         .group-banner {
-            max-height: 300px;
-            width: auto;
+            display: block;
+            width: 100%;
+            max-width: 100%;
+            margin: 20px auto 80px auto;
+            text-align: center;
         }
 
-        .group-banner-right {
+        .group-banner img {
+            width: 100%;
+            height: auto;
+            display: block;
             text-align: center;
-            margin-top: 20px;
-            margin-bottom: 80px;
         }
     </style>
 </head>
@@ -601,6 +614,7 @@
                         <?php if (!empty($recipe['pages'][$page][$side])): ?>
                             <div class="col-<?= $side ?>">
                                 <?php foreach ($recipe['pages'][$page][$side] as $groupName => $groupItems): ?>
+
                                     <?php foreach ($groupItems as $group): ?>
                                         <?php if (!empty($group['use_image_only'])): ?>
                                             <div class="group-banner group-banner-<?= $side ?>">
